Start cmd report & admin
2 commands
Report = to ALERT all admins online for spam/grievers or other mean
people
Admin = internal chat for all admins

both commands go across all the servers.

--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -12,3 +12,11 @@ commands:
   dev:
     description: DEVMODE = kick everyone now!
     usage: /dev
+  report:
+    description: Report to all admins a issue
+    usage: /report <issue>
+    aliases: [r, rep, repo, abuse, meld]
+  admin:
+    description: Admin Chat
+    usage: /Admin <chat>
+    aliases: [a, intern, internal, internally]
