--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,13 +25,13 @@ distributefase:
   stage: deploy
   script:
 # Copy files to there locations
-    - echo $gitcipass|sudo -S cp ../dist/$(git remote show -n origin | grep Fetch | sed 's%^.*/\([^/]*\)\.git$%\1%g').jar /home/minecraft/multicraft/servers/server3/plugins/update/$(git remote show -n origin | grep Fetch | sed 's%^.*/\([^/]*\)\.git$%\1%g').jar
-    - echo $gitcipass|sudo -S cp ../dist/$(git remote show -n origin | grep Fetch | sed 's%^.*/\([^/]*\)\.git$%\1%g').jar /home/minecraft/multicraft/servers/server4/plugins/update/$(git remote show -n origin | grep Fetch | sed 's%^.*/\([^/]*\)\.git$%\1%g').jar
-    - echo $gitcipass|sudo -S cp ../dist/$(git remote show -n origin | grep Fetch | sed 's%^.*/\([^/]*\)\.git$%\1%g').jar /home/minecraft/multicraft/servers/server5/plugins/update/$(git remote show -n origin | grep Fetch | sed 's%^.*/\([^/]*\)\.git$%\1%g').jar
-    - echo $gitcipass|sudo -S cp ../dist/$(git remote show -n origin | grep Fetch | sed 's%^.*/\([^/]*\)\.git$%\1%g').jar /home/minecraft/multicraft/servers/server8/plugins/update/$(git remote show -n origin | grep Fetch | sed 's%^.*/\([^/]*\)\.git$%\1%g').jar
-    - echo $gitcipass|sudo -S cp ../dist/$(git remote show -n origin | grep Fetch | sed 's%^.*/\([^/]*\)\.git$%\1%g').jar /home/minecraft/multicraft/servers/server9/plugins/update/$(git remote show -n origin | grep Fetch | sed 's%^.*/\([^/]*\)\.git$%\1%g').jar
-    - echo $gitcipass|sudo -S cp ../dist/$(git remote show -n origin | grep Fetch | sed 's%^.*/\([^/]*\)\.git$%\1%g').jar /home/minecraft/multicraft/servers/server10/plugins/update/$(git remote show -n origin | grep Fetch | sed 's%^.*/\([^/]*\)\.git$%\1%g').jar
-    - echo $gitcipass|sudo -S cp ../dist/$(git remote show -n origin | grep Fetch | sed 's%^.*/\([^/]*\)\.git$%\1%g').jar /home/minecraft/multicraft/servers/server14/plugins/update/$(git remote show -n origin | grep Fetch | sed 's%^.*/\([^/]*\)\.git$%\1%g').jar
+    - echo $gitcipass|sudo -S cp --parents ../dist/$(git remote show -n origin | grep Fetch | sed 's%^.*/\([^/]*\)\.git$%\1%g').jar /home/minecraft/multicraft/servers/server3/plugins/update/$(git remote show -n origin | grep Fetch | sed 's%^.*/\([^/]*\)\.git$%\1%g').jar
+    - echo $gitcipass|sudo -S cp --parents ../dist/$(git remote show -n origin | grep Fetch | sed 's%^.*/\([^/]*\)\.git$%\1%g').jar /home/minecraft/multicraft/servers/server4/plugins/update/$(git remote show -n origin | grep Fetch | sed 's%^.*/\([^/]*\)\.git$%\1%g').jar
+    - echo $gitcipass|sudo -S cp --parents ../dist/$(git remote show -n origin | grep Fetch | sed 's%^.*/\([^/]*\)\.git$%\1%g').jar /home/minecraft/multicraft/servers/server5/plugins/update/$(git remote show -n origin | grep Fetch | sed 's%^.*/\([^/]*\)\.git$%\1%g').jar
+    - echo $gitcipass|sudo -S cp --parents ../dist/$(git remote show -n origin | grep Fetch | sed 's%^.*/\([^/]*\)\.git$%\1%g').jar /home/minecraft/multicraft/servers/server8/plugins/update/$(git remote show -n origin | grep Fetch | sed 's%^.*/\([^/]*\)\.git$%\1%g').jar
+    - echo $gitcipass|sudo -S cp --parents ../dist/$(git remote show -n origin | grep Fetch | sed 's%^.*/\([^/]*\)\.git$%\1%g').jar /home/minecraft/multicraft/servers/server9/plugins/update/$(git remote show -n origin | grep Fetch | sed 's%^.*/\([^/]*\)\.git$%\1%g').jar
+    - echo $gitcipass|sudo -S cp --parents ../dist/$(git remote show -n origin | grep Fetch | sed 's%^.*/\([^/]*\)\.git$%\1%g').jar /home/minecraft/multicraft/servers/server10/plugins/update/$(git remote show -n origin | grep Fetch | sed 's%^.*/\([^/]*\)\.git$%\1%g').jar
+    - echo $gitcipass|sudo -S cp --parents ../dist/$(git remote show -n origin | grep Fetch | sed 's%^.*/\([^/]*\)\.git$%\1%g').jar /home/minecraft/multicraft/servers/server14/plugins/update/$(git remote show -n origin | grep Fetch | sed 's%^.*/\([^/]*\)\.git$%\1%g').jar
 
 stages:
   - build
