--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -20,3 +20,5 @@ commands:
     description: Admin Chat
     usage: /Admin <chat>
     aliases: [a, intern, internal, internally]
+  update:
+    description: Do the most horrible thing
