--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -28,29 +28,29 @@ commands:
     aliases: [pluginreload, plreload, pluginr] 
   tp:
     description: Teleport to that...
-    usage: /tp <Who> [Player]
+    usage: /tp <who> [player]
     aliases: [teleport]
   gm:
     description: Change gamemode
-    usage: /gm [gamemode] <Who>
+    usage: /gm [gamemode] <who>
     aliases: [gamemode]
   gm0:
     description: Change gamemode to survival
-    usage: /gm0 <Who>
+    usage: /gm0 <who>
     aliases: [gamemodesurvival, gamemodes]
   gm1:
     description: Change gamemode to creative
-    usage: /gm1 <Who>
+    usage: /gm1 <who>
     aliases: [gamemodecreative, gamemodec]
   gm2:
     description: Change gamemode to adventure
-    usage: /gm2 <Who>
+    usage: /gm2 <who>
     aliases: [gamemodeadventure, gamemodea]
   speed:
     description: Set your speed
-    usage: /speed [Speed] <what> <Who>
+    usage: /speed [speed] <what> <who>
     aliases: [speeds]
   msg:
     description: Whispering sounds
-    usage: /msg [Who] [Message]
+    usage: /msg [who] [message]
     aliases: [m, t, whisper, tell]
