--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -58,3 +58,7 @@ commands:
     description: See other inventory
     usage: /invsee [who]
     aliases: [invs, inventorysee]
+  endersee:
+    description: See other enderchest
+    usage: /endersee [who]
+    aliases: [enderchestsee, enders]
