--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -15,7 +15,7 @@ commands:
   report:
     description: Report to all admins a issue
     usage: /report <issue>
-    aliases: [r, rep, repo, abuse, meld]
+    aliases: [re, rep, repo, abuse, meld]
   admin:
     description: Admin Chat
     usage: /Admin <chat>
