--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -78,3 +78,7 @@ commands:
     description: Be that dick
     usage: /kill <player> 
     aliases: [AllahuAkbar, Suicide]
+  reply:
+    description: Say hy back
+    usage: /reply
+    aliases: [r]
