--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,14 +26,16 @@ distributefase:
   script:
 # Set variable $1 as the jar name
     - set $(git remote show -n origin | grep Fetch | sed 's%^.*/\([^/]*\)\.git$%\1%g').jar
+# Sudo su
+    - "echo $gitcipass|sudo -S su"
 # Copy files to there locations
-    - "echo $gitcipass|sudo -S cp -f ../dist/$1 /home/minecraft/multicraft/servers/server3/plugins/update"
-    - "echo $gitcipass|sudo -S cp -f ../dist/$1 /home/minecraft/multicraft/servers/server4/plugins/update"
-    - "echo $gitcipass|sudo -S cp -f ../dist/$1 /home/minecraft/multicraft/servers/server5/plugins/update"
-    - "echo $gitcipass|sudo -S cp -f ../dist/$1 /home/minecraft/multicraft/servers/server8/plugins/update"
-    - "echo $gitcipass|sudo -S cp -f ../dist/$1 /home/minecraft/multicraft/servers/server9/plugins/update"
-    - "echo $gitcipass|sudo -S cp -f ../dist/$1 /home/minecraft/multicraft/servers/server10/plugins/update"
-    - "echo $gitcipass|sudo -S cp -f ../dist/$1 /home/minecraft/multicraft/servers/server14/plugins/update"
+    - "cp -f ../dist/$1 /home/minecraft/multicraft/servers/server3/plugins/update"
+    - "cp -f ../dist/$1 /home/minecraft/multicraft/servers/server4/plugins/update"
+    - "cp -f ../dist/$1 /home/minecraft/multicraft/servers/server5/plugins/update"
+    - "cp -f ../dist/$1 /home/minecraft/multicraft/servers/server8/plugins/update"
+    - "cp -f ../dist/$1 /home/minecraft/multicraft/servers/server9/plugins/update"
+    - "cp -f ../dist/$1 /home/minecraft/multicraft/servers/server10/plugins/update"
+    - "cp -f ../dist/$1 /home/minecraft/multicraft/servers/server14/plugins/update"
 stages:
   - build
   - deploy
