--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,5 +1,5 @@
-name: HUB_Essemtials
-main: nl.makertim.hubessentials.BukkitStarter
+name: iMine_Essemtials
+main: nl.makertim.essentials.BukkitStarter
 version: 1.CI_BUILD_ID CI_BUILD_REF
 
 commands:
