--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,24 +1,12 @@
 # This file is made by MakerTim, a modded version of Sansko1337
-# Last Changed 16-12-2015 01:53
+# Last Changed 06-01-2016 02:10
 buildfase:
   stage: build
   script:
-# allow use of **
-    - shopt -s globstar
-# remove old build directory
-    - rm -rf build
-# create build and dist directory
-    - mkdir build
+    - set $(git remote show -n origin | grep Fetch | sed 's%^.*/\([^/]*\)\.git$%\1%g')
+    - mvn clean install
     - mkdir -p ../dist
-# set plugin version inside plugin.yml
-    - "sed -e 's/^version.*$/version: '$(git rev-parse --short HEAD)'/g' ./src/plugin.yml > ./src/plugin.yml.temp"
-    - mv ./src/plugin.yml.temp ./src/plugin.yml
-# compile all java files with as classpath everything inside libs directory
-    - javac -cp $(find ./libs -regex '.*\.jar' -printf '%p:') -d ./build ./src/**/*.java
-# copy all non java files to the build directory
-    - (cd ./src; find . -type f ! -regex '.*\.java$' -exec cp '--parents' '{}' '../build' ';') 
-# create a .jar file from everything inside the build directory AND put it in the ../dist directory
-    - jar cvf ../dist/$(git remote show -n origin | grep Fetch | sed 's%^.*/\([^/]*\)\.git$%\1%g').jar -C ./build/ .
+    - cp target/$1.jar ../dist/$1.jar
   only:
   - master
 distributefase:
