fixed maven buildscript

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,8 +5,8 @@ buildfase:
   script:
     - set $(git remote show -n origin | grep Fetch | sed 's%^.*/\([^/]*\)\.git$%\1%g')
     - mvn clean deploy
-    - mkdir -p ../dist
-    - cp target/$1.jar ../dist/$1.jar
+    - mkdir -p ../target
+    - cp target/$1.jar ../target/$1.jar
   only:
   - master
 distributefase:
@@ -17,13 +17,13 @@ distributefase:
 # Sudo su
     - "echo $gitcipass|sudo -S bash"
 # Copy files to there locations
-    - "sudo cp -f ../dist/$1 /home/minecraft/multicraft/servers/server3/plugins/update"
-    - "sudo cp -f ../dist/$1 /home/minecraft/multicraft/servers/server4/plugins/update"
-    - "sudo cp -f ../dist/$1 /home/minecraft/multicraft/servers/server5/plugins/update"
-    - "sudo cp -f ../dist/$1 /home/minecraft/multicraft/servers/server8/plugins/update"
-    - "sudo cp -f ../dist/$1 /home/minecraft/multicraft/servers/server9/plugins/update"
-    - "sudo cp -f ../dist/$1 /home/minecraft/multicraft/servers/server10/plugins/update"
-    - "sudo cp -f ../dist/$1 /home/minecraft/multicraft/servers/server14/plugins/update"
+    - "sudo cp -f ../target/$1 /home/minecraft/multicraft/servers/server3/plugins/update"
+    - "sudo cp -f ../target/$1 /home/minecraft/multicraft/servers/server4/plugins/update"
+    - "sudo cp -f ../target/$1 /home/minecraft/multicraft/servers/server5/plugins/update"
+    - "sudo cp -f ../target/$1 /home/minecraft/multicraft/servers/server8/plugins/update"
+    - "sudo cp -f ../target/$1 /home/minecraft/multicraft/servers/server9/plugins/update"
+    - "sudo cp -f ../target/$1 /home/minecraft/multicraft/servers/server10/plugins/update"
+    - "sudo cp -f ../target/$1 /home/minecraft/multicraft/servers/server14/plugins/update"
 stages:
   - build
   - deploy
