--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,30 +1,17 @@
 # This file is made by MakerTim, a modded version of Sansko1337
-# Last Changed 06-01-2016 02:10
+# Last Changed 03-03-2016 01:50
 buildfase:
   stage: build
   script:
     - set $(git remote show -n origin | grep Fetch | sed 's%^.*/\([^/]*\)\.git$%\1%g')
     - mvn clean deploy
-    - mkdir -p ../target
-    - cp target/$1.jar ../target/$1.jar
-  only:
-  - master
-distributefase:
-  stage: deploy
-  script:
-# Set variable $1 as the jar name
-    - set $(git remote show -n origin | grep Fetch | sed 's%^.*/\([^/]*\)\.git$%\1%g').jar
-# Sudo su
-    - "echo $gitcipass|sudo -S bash"
-# Copy files to there locations
-    - "sudo cp -f ../target/$1 /home/minecraft/multicraft/servers/server3/plugins/update"
-    - "sudo cp -f ../target/$1 /home/minecraft/multicraft/servers/server4/plugins/update"
-    - "sudo cp -f ../target/$1 /home/minecraft/multicraft/servers/server5/plugins/update"
-    - "sudo cp -f ../target/$1 /home/minecraft/multicraft/servers/server8/plugins/update"
-    - "sudo cp -f ../target/$1 /home/minecraft/multicraft/servers/server9/plugins/update"
-    - "sudo cp -f ../target/$1 /home/minecraft/multicraft/servers/server10/plugins/update"
-    - "sudo cp -f ../target/$1 /home/minecraft/multicraft/servers/server14/plugins/update"
-    - "sudo cp -f ../target/$1 /home/minecraft/multicraft/servers/server16/plugins/update"
+    - curl -T target/$1.jar ftp://Deploy.3:$ftppass@localhost/plugins/update/
+    - curl -T target/$1.jar ftp://Deploy.4:$ftppass@localhost/plugins/update/
+    - curl -T target/$1.jar ftp://Deploy.5:$ftppass@localhost/plugins/update/
+    - curl -T target/$1.jar ftp://Deploy.8:$ftppass@localhost/plugins/update/
+    - curl -T target/$1.jar ftp://Deploy.9:$ftppass@localhost/plugins/update/
+    - curl -T target/$1.jar ftp://Deploy.10:$ftppass@localhost/plugins/update/
+    - curl -T target/$1.jar ftp://Deploy.14:$ftppass@localhost/plugins/update/
+    - curl -T target/$1.jar ftp://Deploy.16:$ftppass@localhost/plugins/update/
 stages:
   - build
-  - deploy
