--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,7 @@ buildfase:
   stage: build
   script:
     - set $(git remote show -n origin | grep Fetch | sed 's%^.*/\([^/]*\)\.git$%\1%g')
-    - mvn clean deploy
+    - mvn clean install
     - curl -T target/$1.jar ftp://Deploy.3:$ftppass@localhost/plugins/update/
     - curl -T target/$1.jar ftp://Deploy.4:$ftppass@localhost/plugins/update/
     - curl -T target/$1.jar ftp://Deploy.5:$ftppass@localhost/plugins/update/
